Két random szám, nagyobb előre

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -53,3 +53,11 @@
             <% break;
     
 } %></p>
+
+<p>
+    <%if(randomNum>randomNum2) { %>
+        <%=randomNum %>, <%=randomNum2 %>
+    <% } else { %>
+        <%=randomNum2 %>, <%=randomNum %>
+    <% } %>
+</p>
